changed image src

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="/Users/bhagyeshrathi/Desktop/Bootcamp/Web Development/HTML-Personal Site/images/PXL-20220108-174101688.PORTRAIT-Original-modified (1).png" width="180" alt="bhagyesh_profile_picture"></td>
+      <td><img src="images/PXL-20220108-174101688.PORTRAIT-Original-modified (1).png" width="180" alt="bhagyesh_profile_picture"></td>
       <td>
         <h1>Bhagyesh Rathi</h1>
         <p> <i>Student at <strong> <a href="https://www.sjsu.edu/">San Jose State University</a></strong></i></p>
