--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </tr>
   </table>
 
-  <a href="/Users/bhagyeshrathi/Desktop/Bootcamp/Web Development/HTML-Personal Site/contact.html">Contact Me</a>
+  <a href="contact.html">Contact Me</a>
 
   <hr>
 
