Updated Relevant coursework link

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
       <li>Bachelor of Science in <strong><i>Computer Science</i></strong></li>
       <li>GPA: 3.7</li>
       <li>President's Scholar [Fall 2021]</li>
-      <li><a href="/Users/bhagyeshrathi/Desktop/Bootcamp/Web Development/HTML-Personal Site/relevant_coursework.html">Relevant Coursework</a></li>
+      <li><a href="relevant_coursework.html">Relevant Coursework</a></li>
     </ul>
   </ul>
   </p>
